# gamm

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
benchmark/: CMakeLists.txt
benchmark/src/: Benchmark.cpp
include/: BS_thread_pool.hpp
include/Amm/: Bamm.hpp  CombinedParallel.hpp  GlobalTaskDispatcher.hpp  InterParallel.hpp  IntraParallel.hpp  Single.hpp
include/Svd/: AbstractJTS.hpp  ParallelJTS.hpp  SequentialJTS.hpp  Svd.hpp
include/Utils/: Config.hpp  Logger.hpp  UtilityFunctions.hpp  ZeroedColumns.hpp
include/Utils/Meter/: AbstractEnergyMeter.hpp  JetsonEnergyMeter.hpp
src/: CMakeLists.txt
src/Amm/: Bamm.cpp  CMakeLists.txt  CombinedParallel.cpp  GlobalTaskDispatcher.cpp  InterParallel.cpp  IntraParallel.cpp  Single.cpp
src/Svd/: AbstractJTS.cpp  CMakeLists.txt  ParallelJTS.cpp  SequentialJTS.cpp  Svd.cpp
src/Utils/: CMakeLists.txt  Config.cpp  UtilityFunctions.cpp  ZeroedColumns.cpp
src/Utils/Meter/: AbstractEnergyMeter.cpp  CMakeLists.txt  JetsonEnergyMeter.cpp
test/: CMakeLists.txt
